CICO-4888 solviing issue with line break in confirmation page-desktop

--- a/guestweb/css/less/snt.less
+++ b/guestweb/css/less/snt.less
@@ -1226,6 +1226,7 @@ body > div[ng-view] {
     padding: 0;
     overflow: hidden;
   }
+  .hide-in-desktop { display: none !important; }   
   
   .icontop {
     padding-top: 20px;
